# DiMoE-VL

./: .gitignore  README.md  dimoe.py  init_env.sh  pyproject.toml  requirements.txt
configs/data/: normalize.yaml  stage_blends.yaml  stage_blends_full16m.yaml  stage_blends_stage0_full.yaml  wds_pack.yaml
configs/eval/: default.yaml
configs/exp/: ablations.yaml
configs/infer/: default.yaml
configs/model/: default.yaml
configs/train/: deepspeed_zero1_h800.json  deepspeed_zero2_h800.json  deepspeed_zero3_h800.json  stage0_naive.yaml  stage1_align.yaml  stage2_full.yaml  stage3_lownfe.yaml
docs/: DIMOE_VL_NIPS2026_RUNBOOK.md  INFERENCE.md  INSTALLATION.md  TRAINING_EVALUATION.md
eval/lmms-eval/: pyproject.toml
eval/lmms-eval/lmms_eval/api/: task.py
eval/lmms-eval/lmms_eval/loggers/: evaluation_tracker.py
eval/lmms-eval/lmms_eval/models/: __init__.py  llava.py  llava_onevision_diffusionvl_qwen.py  llava_onevision_diffusionvl_qwen3vl_moe.py  llava_onevision_diffusionvl_qwenvl.py  llava_onevision_llava_llada_bd3lm.py  qwen2_5_vl.py
eval/lmms-eval/lmms_eval/models/model_utils/: reasoning_model_utils.py
eval/lmms-eval/lmms_eval/tasks/chartqa/: chartqa.yaml
eval/lmms-eval/lmms_eval/tasks/detailcaps/: detailcaps.yaml  utils.py
eval/lmms-eval/lmms_eval/tasks/mmbench/: _default_template_mmbench_en_yaml
eval/lmms-eval/lmms_eval/tasks/mme/: mme.yaml
eval/lmms-eval/lmms_eval/tasks/mmmu_pro/: mmmu_pro_standard.yaml
eval/lmms-eval/lmms_eval/tasks/mmstar/: mmstar.yaml
eval/lmms-eval/lmms_eval/tasks/muirbench/: muirbench.yaml
eval/lmms-eval/lmms_eval/tasks/realworldqa/: realworldqa.yaml
eval/scripts/: diffusionvl_qwen.sh  diffusionvl_qwen3vl_moe.sh  diffusionvl_qwenvl.sh  llava_llada_bd3lm.sh  llava_qwen.sh
scripts/data/: build_mc_dsa_from_stage23.py
scripts/diffusionvl_prepare/: convert_qwen2.5vl_to_diffusionvl.py  convert_qwen3vl_moe_to_diffusionvl.py
scripts/local/: 00_data_pipeline.sh  00_data_pipeline_full16m.sh  10_train_stage.sh  11_train_all_stages.sh  20_eval_and_diag.sh  30_benchmark_grid.sh  40_run_ablations.sh
scripts/slurm/: h800_dimoe_smoke.sbatch  h800_dimoe_smoke_offline.sbatch  monitor_stage_health.sh  (+10 more)
tests/: test_cli_top_help.py  test_dataset_lazy.py  test_dmar.py  test_io_streaming.py  test_losses.py  test_masking.py  test_prefix_cache.py
train/: .gitignore  pyproject.toml
(+58 files in other folders)
